# rsomics-bam-compare

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  format.rs  lib.rs  operation.rs  output.rs  scale.rs
tests/: compat.rs  smoke.rs
tests/golden/: ctrl.bam  ctrl.bam.bai  ctrl.sam  treat.bam  treat.bam.bai  treat.sam
