[package]
name = "rsomics-bam-compare"
version = "0.1.2"
description = "Per-bin comparison of two BAMs as a bedGraph/bigWig track — Rust port of deeptools bamCompare (log2/ratio/subtract/... of binned coverage with readCount scaling)"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bam-compare"
authors = ["Zane Leong <efd@live.com>"]
readme = "README.md"

[[bin]]
name = "rsomics-bam-compare"
path = "src/main.rs"

[lib]
name = "rsomics_bam_compare"
path = "src/lib.rs"

doctest = false
[dependencies]
rsomics-bbi = { version = "0.1" }
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-coverage-core = { version = "0.1" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "bench"
harness = false

